@@ -3,11 +3,10 @@ package com.senlainc.javacourses.petushokvaliantsin.configuration;
 import com.senlainc.javacourses.petushokvaliantsin.configuration.security.AuthorizationFilter;
 import com.senlainc.javacourses.petushokvaliantsin.configuration.security.handler.CustomAccessDeniedHandler;
 import com.senlainc.javacourses.petushokvaliantsin.configuration.security.handler.CustomAuthenticationEntryPointHandler;
-import com.senlainc.javacourses.petushokvaliantsin.configuration.security.handler.CustomAuthenticationSuccessHandler;
 import com.senlainc.javacourses.petushokvaliantsin.configuration.security.handler.CustomLogoutSuccessHandler;
 import com.senlainc.javacourses.petushokvaliantsin.configuration.security.mapper.TokenMapper;
 import com.senlainc.javacourses.petushokvaliantsin.enumeration.EnumRole;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
@@ -16,74 +15,69 @@ import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.ProviderManager;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
-import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.AuthenticationEntryPoint;
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.access.AccessDeniedHandler;
-import org.springframework.security.web.authentication.AuthenticationSuccessHandler;
 import org.springframework.security.web.authentication.logout.LogoutSuccessHandler;
 
-import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
-@EnableGlobalMethodSecurity(securedEnabled = true)
-public class SecurityConfig extends WebSecurityConfigurerAdapter {
+@EnableMethodSecurity(securedEnabled = true)
+@RequiredArgsConstructor
+public class SecurityConfig {
 
     private static final String ADVERTISEMENT_URL = "/advertisements/**";
+
+    @Qualifier("userCredServiceImpl")
     private final UserDetailsService userDetailsService;
-    @Value("${securityConfig.tokenHeader:Bearer}")
+
+    @Value("${securityConfig.tokenHeader:Authorization}")
     private String tokenHeader;
-    @Value("${securityConfig.tokenPrefix:key}")
+    @Value("${securityConfig.tokenPrefix:Bearer}")
     private String tokenPrefix;
-    @Value("${securityConfig.key:Authorization}")
+    @Value("${securityConfig.key:key}")
     private String secretKey;
 
-    @Autowired
-    public SecurityConfig(@Qualifier("userCredServiceImpl") UserDetailsService userDetailsService) {
-        this.userDetailsService = userDetailsService;
-    }
-
-    @Override
-    protected void configure(HttpSecurity http) throws Exception {
-        http.authorizeRequests()
-                .antMatchers("/login", "/sign-up").anonymous()
-                .antMatchers("/logout").authenticated()
-                .antMatchers("/admin/*").hasRole(
-                        EnumRole.ROLE_ADMIN.getRole())
-                .antMatchers("/moderator/*").hasAnyRole(
-                        EnumRole.ROLE_MODERATOR.getRole(), EnumRole.ROLE_ADMIN.getRole())
-                .antMatchers("/account/**").hasAnyRole(
-                        EnumRole.ROLE_COMMON.getRole(), EnumRole.ROLE_ADMIN.getRole(), EnumRole.ROLE_MODERATOR.getRole())
-                .antMatchers(HttpMethod.PUT, ADVERTISEMENT_URL).hasAnyRole(
-                        EnumRole.ROLE_COMMON.getRole(), EnumRole.ROLE_MODERATOR.getRole(), EnumRole.ROLE_ADMIN.getRole())
-                .antMatchers(HttpMethod.POST, ADVERTISEMENT_URL, "/users/{id}").hasAnyRole(
-                        EnumRole.ROLE_COMMON.getRole(), EnumRole.ROLE_MODERATOR.getRole(), EnumRole.ROLE_ADMIN.getRole())
-                .antMatchers(HttpMethod.DELETE, ADVERTISEMENT_URL).hasAnyRole(
-                        EnumRole.ROLE_COMMON.getRole(), EnumRole.ROLE_MODERATOR.getRole(), EnumRole.ROLE_ADMIN.getRole())
-                .antMatchers(HttpMethod.GET, ADVERTISEMENT_URL).permitAll()
-                .and().exceptionHandling()
-                .authenticationEntryPoint(authenticationEntryPoint())
-                .accessDeniedHandler(accessDeniedHandler())
-                .and().logout().logoutSuccessHandler(logoutSuccessHandler())
-                .and().formLogin().loginPage("/login").successHandler(authenticationSuccessHandler())
-                .and().httpBasic()
-                .and().csrf().disable();
-        http.addFilter(new AuthorizationFilter(authenticationManager(), tokenMapper()));
+    @Bean
+    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+        return http
+                .csrf(AbstractHttpConfigurer::disable)
+                .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers("/login", "/sign-up").anonymous()
+                        .requestMatchers("/logout").authenticated()
+                        .requestMatchers("/admin/**").hasRole(EnumRole.ROLE_ADMIN.getRole())
+                        .requestMatchers("/moderator/**").hasAnyRole(
+                                EnumRole.ROLE_MODERATOR.getRole(), EnumRole.ROLE_ADMIN.getRole())
+                        .requestMatchers("/account/**").hasAnyRole(
+                                EnumRole.ROLE_COMMON.getRole(), EnumRole.ROLE_MODERATOR.getRole(), EnumRole.ROLE_ADMIN.getRole())
+                        .requestMatchers(HttpMethod.GET, ADVERTISEMENT_URL).permitAll()
+                        .requestMatchers(ADVERTISEMENT_URL).authenticated()
+                        .anyRequest().permitAll())
+                .exceptionHandling(e -> e
+                        .accessDeniedHandler(accessDeniedHandler())
+                        .authenticationEntryPoint(authenticationEntryPoint()))
+                .logout(l -> l.logoutSuccessHandler(logoutSuccessHandler()))
+                .addFilter(new AuthorizationFilter(authenticationManager(), tokenMapper()))
+                .build();
     }
 
     @Bean
-    @Override
     public AuthenticationManager authenticationManager() {
         final DaoAuthenticationProvider authenticationProvider = new DaoAuthenticationProvider();
         authenticationProvider.setUserDetailsService(userDetailsService);
         authenticationProvider.setPasswordEncoder(passwordEncoder());
-        final ProviderManager providerManager = new ProviderManager(Collections.singletonList(authenticationProvider));
+        final ProviderManager providerManager = new ProviderManager(List.of(authenticationProvider));
         providerManager.setEraseCredentialsAfterAuthentication(false);
         return providerManager;
     }
@@ -111,10 +105,5 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
     @Bean
     public LogoutSuccessHandler logoutSuccessHandler() {
         return new CustomLogoutSuccessHandler();
-    }
-
-    @Bean
-    public AuthenticationSuccessHandler authenticationSuccessHandler() {
-        return new CustomAuthenticationSuccessHandler();
     }
 }
